--- a/app/src/main/res/layout/item_friend_preview.xml
+++ b/app/src/main/res/layout/item_friend_preview.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="친구의 생일을 확인해보세요!"
+        tools:text="친구의 생일을 확인해보세요!"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_friend_preview_desc"
