--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -28,6 +28,7 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="10dp"
+        android:visibility="gone"
         android:src="@drawable/selector_bookmark"
         app:layout_constraintEnd_toStartOf="@+id/img_profile_menu"
         app:layout_constraintTop_toTopOf="parent" />
@@ -101,6 +102,7 @@
         tools:text="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz" />
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/white"
@@ -118,8 +120,9 @@
 
         <ImageView
             android:id="@+id/img_profile_edit"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="30dp"
             android:src="@drawable/ic_edit_24"
             app:layout_constraintEnd_toStartOf="@+id/img_profile_friend"
@@ -142,8 +145,9 @@
 
         <ImageView
             android:id="@+id/img_profile_friend"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="30dp"
             android:src="@drawable/ic_person_add_24"
             app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +175,7 @@
         android:id="@+id/cst_profile_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingVertical="10dp"
+        android:paddingVertical="20dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -179,8 +183,8 @@
 
         <ImageView
             android:id="@+id/img_profile_chat"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:src="@drawable/ic_chat_stroke_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
