--- a/app/src/main/res/layout/fragment_additional_user_info.xml
+++ b/app/src/main/res/layout/fragment_additional_user_info.xml
@@ -105,6 +105,24 @@
         app:layout_constraintTop_toBottomOf="@id/edt_signup_tel"
  />
 
+    <EditText
+        android:id="@+id/edt_signup_password"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="50dp"
+        android:hint="비밀번호"
+        android:outlineSpotShadowColor="@color/gray"
+        android:focusable="false"
+        android:cursorVisible="false"
+        android:clickable="false"
+        android:textSize="17sp"
+        android:inputType="text"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/edt_signup_birth"
+        />
 
     <Button
         android:id="@+id/btn_signup_confirm"
