--- a/app/src/main/res/layout/fragment_chat_room_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_chat_room_bottom_sheet.xml
@@ -8,35 +8,7 @@
     tools:context=".ui.chatroom.ChatRoomBottomSheetFragment"
     android:padding="20dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_dialog_bottom_sheet_album"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-        <ImageView
-            android:id="@+id/iv_dialog_bottom_sheet_album"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_album_bottom_sheet"
-            android:scaleType="fitXY"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/iv_dialog_bottom_sheet_album"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textAlignment="center"
-            android:text="앨범" />
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,8 +16,7 @@
         android:layout_width="40dp"
         android:layout_height="50dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/layout_dialog_bottom_sheet_album"
-        app:layout_constraintEnd_toStartOf="@+id/layout_dialog_bottom_sheet_file">
+        app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
             android:id="@+id/iv_dialog_bottom_sheet_camera"
@@ -64,33 +35,33 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:textAlignment="center"
-            android:text="앨범" />
-
+            android:text="카메라" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_dialog_bottom_sheet_file"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
+        android:id="@+id/layout_dialog_bottom_sheet_album"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
+        app:layout_constraintStart_toEndOf="@+id/layout_dialog_bottom_sheet_camera"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="100dp"
-        app:layout_constraintStart_toEndOf="@+id/layout_dialog_bottom_sheet_camera">
-
-
+        android:layout_marginLeft="10dp"
+        >
         <ImageView
-            android:id="@+id/iv_dialog_bottom_sheet_file"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_file_bottom_sheet"
+            android:id="@+id/iv_dialog_bottom_sheet_album"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_album_bottom_sheet"
+            android:scaleType="fitXY"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/iv_chat_room_bottom_sheet_album_title"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
-
         <TextView
+            android:id="@+id/iv_chat_room_bottom_sheet_album_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/iv_dialog_bottom_sheet_file"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +70,10 @@
 
 
 
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
