Add: google auth with friend

--- a/app/src/main/res/drawable/bg_imageview_radius_gray.xml
+++ b/app/src/main/res/drawable/bg_imageview_radius_gray.xml
@@ -5,4 +5,6 @@
     <stroke
         android:width="4dp"
         android:color="#F3F2F2" />
+    <solid
+        android:color="@color/flame_sky_blue"/>
 </shape>
