--- a/app/src/main/res/layout/item_person_invite_room.xml
+++ b/app/src/main/res/layout/item_person_invite_room.xml
@@ -11,9 +11,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:background="@drawable/bg_chat_list_round"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -22,9 +19,9 @@
             android:id="@+id/iv_invite_room_image"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="4dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/dummy"
+            android:src="@drawable/ic_person_white_24"
+            android:background="@drawable/bg_imageview_radius_gray"
+            android:padding="1.2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
