--- a/app/src/main/res/layout/fragment_add_profile.xml
+++ b/app/src/main/res/layout/fragment_add_profile.xml
@@ -39,25 +39,54 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/v_img_profile"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_skyblue2_50"
+        app:layout_constraintBottom_toBottomOf="@+id/img_add_profile"
+        app:layout_constraintEnd_toEndOf="@+id/img_add_profile"
+        app:layout_constraintStart_toStartOf="@+id/img_add_profile"
+        app:layout_constraintTop_toTopOf="@+id/img_add_profile" />
+
+    <ImageView
+        android:id="@+id/img_friend_hidden_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_person_18"
+        app:layout_constraintBottom_toBottomOf="@+id/img_add_profile"
+        app:layout_constraintEnd_toEndOf="@+id/img_add_profile"
+        app:layout_constraintStart_toStartOf="@+id/img_add_profile"
+        app:layout_constraintTop_toTopOf="@+id/img_add_profile"
+        app:tint="@color/white" />
+
     <ImageView
         android:id="@+id/img_add_profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginBottom="200dp"
-        android:background="@drawable/bg_skyblue2_50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/img_add_profile_gallery"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+    <View
+        android:id="@+id/v_add_profile_gallery"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:background="@drawable/bg_white_15"
-        android:foreground="@drawable/ic_camera_24"
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/img_add_profile"
         app:layout_constraintEnd_toEndOf="@+id/img_add_profile" />
+
+    <ImageView
+        android:id="@+id/img_add_profile_gallery"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_camera_24"
+        app:layout_constraintBottom_toBottomOf="@+id/v_add_profile_gallery"
+        app:layout_constraintEnd_toEndOf="@+id/v_add_profile_gallery"
+        app:layout_constraintStart_toStartOf="@+id/v_add_profile_gallery"
+        app:layout_constraintTop_toTopOf="@+id/v_add_profile_gallery" />
 
     <TextView
         android:id="@+id/tv_add_profile_nickname"
@@ -105,15 +134,26 @@
         app:layout_constraintStart_toStartOf="@id/tv_add_profile_desc"
         app:layout_constraintTop_toBottomOf="@id/tv_add_profile_desc" />
 
-    <ImageView
-        android:id="@+id/img_add_profile_gallery_bg"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+    <View
+        android:id="@+id/v_add_profile_gallery_bg"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_margin="20dp"
         android:background="@drawable/bg_white_15"
-        android:foreground="@drawable/ic_camera_24"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_add_profile_gallery_bg"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:src="@drawable/ic_camera_24"
+        app:layout_constraintBottom_toBottomOf="@+id/v_add_profile_gallery_bg"
+        app:layout_constraintEnd_toEndOf="@+id/v_add_profile_gallery_bg"
+        app:layout_constraintStart_toStartOf="@+id/v_add_profile_gallery_bg"
+        app:layout_constraintTop_toTopOf="@+id/v_add_profile_gallery_bg" />
+
 
     <ImageView
         android:id="@+id/img_add_profile_emoji_1"
