--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cst_profile"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -28,8 +29,8 @@
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_margin="10dp"
-        android:visibility="gone"
         android:src="@drawable/selector_bookmark"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/img_profile_menu"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,9 +40,9 @@
         android:layout_height="35dp"
         android:layout_margin="10dp"
         android:src="@drawable/ic_more_black_24"
-        app:tint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/white" />
 
 
     <View
@@ -50,22 +51,22 @@
         android:layout_height="0dp"
         android:background="@drawable/bg_skyblue2_50"
         app:layout_constraintBottom_toBottomOf="@+id/img_profile"
+        app:layout_constraintEnd_toEndOf="@+id/img_profile"
         app:layout_constraintStart_toStartOf="@+id/img_profile"
-        app:layout_constraintTop_toTopOf="@+id/img_profile"
-        app:layout_constraintEnd_toEndOf="@+id/img_profile"/>
+        app:layout_constraintTop_toTopOf="@+id/img_profile" />
 
     <ImageView
         android:id="@+id/img_friend_hidden_icon"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:tint="@color/white"
         android:src="@drawable/ic_person_18"
         app:layout_constraintBottom_toBottomOf="@+id/img_profile"
+        app:layout_constraintEnd_toEndOf="@+id/img_profile"
         app:layout_constraintStart_toStartOf="@+id/img_profile"
         app:layout_constraintTop_toTopOf="@+id/img_profile"
-        app:layout_constraintEnd_toEndOf="@+id/img_profile"/>
+        app:tint="@color/white" />
 
-    
+
     <ImageView
         android:id="@+id/img_profile"
         android:layout_width="100dp"
@@ -122,8 +123,8 @@
             android:id="@+id/img_profile_edit"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/ic_edit_24"
             app:layout_constraintEnd_toStartOf="@+id/img_profile_friend"
             app:layout_constraintStart_toStartOf="parent"
@@ -147,8 +148,8 @@
             android:id="@+id/img_profile_friend"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="10dp"
             android:src="@drawable/ic_person_add_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/img_profile_edit"
