Fix: Profile > SingleFeed > TotalFeed 뒤로가기 시 UI stack 관리

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -240,7 +240,8 @@
 
         <action
             android:id="@+id/action_feed_single_to_total"
-            app:destination="@id/navigation_total_feed" />
+            app:destination="@id/navigation_total_feed"
+            app:popUpToInclusive="true"/>
         <argument
             android:name="profileId"
             android:defaultValue="0L"
