Fix: EditProfile 상태메세지 오류
- 프로필 > 프로필 수정으로 기존의 상태메세지가 넘어오지 않는 오류 해결

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -181,6 +181,12 @@
             android:id="@+id/action_edit_to_edit_desc"
             app:destination="@id/navigation_profile_desc" />
 
+        <action
+            android:id="@+id/action_edit_to_friend"
+            app:destination="@id/navigation_friend"
+            app:popUpTo="@id/navigation_friend"
+            app:popUpToInclusive="true"/>
+
         <argument
             android:name="userInfo"
             app:argType="com.sgs.devcamp2.flametalk_android.data.model.profile.Profile"
