--- a/app/src/main/res/layout/drawer_layout_chat_room.xml
+++ b/app/src/main/res/layout/drawer_layout_chat_room.xml
@@ -61,6 +61,26 @@
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_draw_file_List"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toBottomOf="@id/layout_draw_media"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                >
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_draw_file_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
@@ -72,7 +92,7 @@
                 android:padding="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/layout_draw_media">
+                app:layout_constraintTop_toBottomOf="@id/layout_draw_file_List">
 
                 <TextView
                     android:id="@+id/tv_draw_user_list_title"
@@ -129,7 +149,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/layout_draw_user_list"
                 app:layout_constraintStart_toStartOf="parent"
                 android:background="@drawable/bg_chat_list_round"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 >
 
 
@@ -137,7 +157,8 @@
                     android:id="@+id/iv_chat_room_draw_user_image"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@drawable/ic_person_black_24"
+                    android:src="@drawable/ic_person_white_24"
+                    android:background="@drawable/bg_imageview_radius_gray"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -166,7 +187,6 @@
                 android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="5dp"
                 app:layout_constraintTop_toBottomOf="@id/layout_chat_room_draw_image_area"
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
