Fix: AddProfile response binding
- 친구 추가 성공 시 response 데이터 바인딩 및 성공 메세지 출력
- 뒤로가기 눌러서 친구 리스트 뷰로 이동 시 리스트 갱신

--- a/app/src/main/res/layout/fragment_add_friend.xml
+++ b/app/src/main/res/layout/fragment_add_friend.xml
@@ -142,11 +142,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
+        android:text="친구 추가가 완료되었습니다"
         android:textColor="@color/flame_blue"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/item_add_friend"
         app:layout_constraintStart_toStartOf="@+id/item_add_friend"
-        app:layout_constraintTop_toBottomOf="@+id/item_add_friend"
-        tools:text="친구 추가가 완료되었습니다" />
+        app:layout_constraintTop_toBottomOf="@+id/item_add_friend" />
 </androidx.constraintlayout.widget.ConstraintLayout>
