--- a/app/src/main/res/layout/item_friend_preview.xml
+++ b/app/src/main/res/layout/item_friend_preview.xml
@@ -26,6 +26,31 @@
         app:layout_constraintTop_toTopOf="@+id/v_friend_preview"
         app:tint="@color/white" />
 
+
+    <ImageView
+        android:id="@+id/img_friend_preview_none"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="10dp"
+        android:background="@drawable/bg_pink_30"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/img_friend_preview_none_icon"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_cake_24"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/img_friend_preview_none"
+        app:layout_constraintEnd_toEndOf="@+id/img_friend_preview_none"
+        app:layout_constraintStart_toStartOf="@+id/img_friend_preview_none"
+        app:layout_constraintTop_toTopOf="@+id/img_friend_preview_none"
+        app:tint="@color/white" />
+
     <ImageView
         android:id="@+id/img_friend_preview"
         android:layout_width="50dp"
@@ -35,29 +60,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/img_friend_preview_none"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:background="@drawable/bg_pink_30"
-        android:src="@drawable/ic_smile_white_24"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/tv_friend_preview_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        tools:text="친구의 생일을 확인해보세요!"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_friend_preview_desc"
         app:layout_constraintStart_toEndOf="@+id/img_friend_preview"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="친구의 생일을 확인해보세요!" />
 
     <TextView
         android:id="@+id/tv_friend_preview_desc"
