--- a/app/src/main/res/layout/item_friend_preview.xml
+++ b/app/src/main/res/layout/item_friend_preview.xml
@@ -33,7 +33,7 @@
         android:layout_height="50dp"
         android:layout_margin="10dp"
         android:background="@drawable/bg_pink_30"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +44,7 @@
         android:layout_height="35dp"
         android:layout_margin="10dp"
         android:src="@drawable/ic_cake_24"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/img_friend_preview_none"
         app:layout_constraintEnd_toEndOf="@+id/img_friend_preview_none"
         app:layout_constraintStart_toStartOf="@+id/img_friend_preview_none"
