--- a/app/src/main/res/layout/item_left_start_file_chat_room.xml
+++ b/app/src/main/res/layout/item_left_start_file_chat_room.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_left_start_file_chat_room">
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_left_start_file_chat_room_image_container"
         android:layout_width="wrap_content"
@@ -14,26 +15,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="20dp"
-        android:background="@drawable/bg_chat_list_round"
         >
 
         <ImageView
             android:id="@+id/iv_left_start_file_chat_room_user_img"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:padding="4dp"
-            android:scaleType="centerInside"
-            android:src="@drawable/dummy"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/bg_imageview_radius_gray"
+            android:padding="1.2dp"
+            tools:src="@drawable/dummy"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-
-
-            />
+            app:layout_constraintTop_toTopOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_left_start_file_chat_room_text_container"
@@ -67,7 +62,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_left_start_text_chat_room_user_name"
             >
             <ImageView
-                android:id="@+id/tv_left_start_file_chat_room_message"
+                android:id="@+id/iv_left_start_file_chat_room_message"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="5dp"
