--- a/app/src/main/res/layout/item_person_one.xml
+++ b/app/src/main/res/layout/item_person_one.xml
@@ -7,16 +7,17 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_width="100dp"
-    android:layout_height="100dp">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <ImageView
         android:id="@+id/iv_person_one_img"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         tools:src="@drawable/dummy"
-        android:background="@drawable/bg_layout_round_gray"
+        android:background="@drawable/bg_imageview_radius_gray"
+        android:padding="1.2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
