--- a/app/src/main/res/layout/item_person_three.xml
+++ b/app/src/main/res/layout/item_person_three.xml
@@ -14,11 +14,10 @@
 
     <ImageView
         android:id="@+id/iv_person_three_img_1"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.55"
-        app:layout_constraintHeight_percent="0.55"
-        android:layout_height="0dp"
-        android:background="@drawable/bg_layout_round_gray"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/bg_imageview_radius_gray"
+        android:padding="1.2dp"
         tools:src="@drawable/dummy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -28,22 +27,20 @@
         />
     <ImageView
         android:id="@+id/iv_person_three_img_2"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.55"
-        app:layout_constraintHeight_percent="0.55"
-        android:background="@drawable/bg_layout_round_gray"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/bg_imageview_radius_gray"
+        android:padding="1.2dp"
         tools:src="@drawable/dummy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:translationZ="2dp"/>
     <ImageView
         android:id="@+id/iv_person_three_img_3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.55"
-        app:layout_constraintHeight_percent="0.55"
-        android:background="@drawable/bg_layout_round_gray"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="@drawable/bg_imageview_radius_gray"
+        android:padding="1.2dp"
         tools:src="@drawable/dummy"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
