--- a/app/src/main/res/layout/item_person_three_chat_list.xml
+++ b/app/src/main/res/layout/item_person_three_chat_list.xml
@@ -133,9 +133,21 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             tools:text="오전 09시 30분"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_three_chat_room_message_count"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/bg_round_red"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/tv_three_chat_room_list_date"
+            app:layout_constraintStart_toStartOf="@id/tv_three_chat_room_list_date"
+            app:layout_constraintEnd_toEndOf="@id/tv_three_chat_room_list_date"
+            tools:text="0"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
