--- a/app/src/main/res/layout/fragment_invite_room.xml
+++ b/app/src/main/res/layout/fragment_invite_room.xml
@@ -115,6 +115,8 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 android:overScrollMode="never"
+                tools:itemCount="2"
+                tools:listitem="@layout/item_person_invite_room"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_invite_room_mark" />
@@ -134,6 +136,8 @@
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
                 android:overScrollMode="never"
+                tools:listitem="@layout/item_person_invite_room"
+                tools:itemCount="3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_invite_room_friends" />
