--- a/app/src/main/res/layout/fragment_update_chat_room.xml
+++ b/app/src/main/res/layout/fragment_update_chat_room.xml
@@ -71,6 +71,9 @@
             android:id="@+id/iv_update_chat_room_profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            tools:src="@drawable/dummy"
+            android:background="@drawable/bg_imageview_radius_gray"
+            android:padding="1.2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -148,47 +151,7 @@
         app:layout_constraintTop_toBottomOf="@id/layout_update_chat_room_name"
         />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_update_chat_room_setting"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_update_chat_room_name"
-        android:padding="10dp">
-        <TextView
-            android:id="@+id/tv_update_chat_room_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="채팅방 설정"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:textSize="12dp"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_update_chat_room_setting"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="15dp"
-            >
-            <TextView
-                android:id="@+id/tv_update_chat_room_lock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="현재 채팅방 입력창 잠금"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-            <com.google.android.material.switchmaterial.SwitchMaterial
-                android:id="@+id/sw_update_chat_room_lock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
